@@ -15,6 +15,7 @@
 - Ability to specify multiple inbound (IMAP/POP3) and outbound (SMTP) email servers. Specified by [main]emailservers= option or -e commandline option.
 - Standardized log format for easier searching and organization (Issue #137)
 - Added ability to send output to syslog server or log aggregator (Issue #128)
+- Fixed long-standing bug in handling Content Transfer Encoded messages (Issue #141)
 
 2.2.11
 ------
